<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/postUser"
        android:layout_width="219dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="6sp"
        android:text="@string/item_post_user"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toEndOf="@+id/postAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postDate"
        android:layout_width="218dp"
        android:layout_height="21dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="2sp"
        android:text="@string/item_post_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toEndOf="@+id/postAvatar"
        app:layout_constraintTop_toBottomOf="@+id/postUser" />

    <TextView
        android:id="@+id/likeCount"
        android:layout_width="44dp"
        android:layout_height="32dp"
        android:layout_marginEnd="196dp"
        android:gravity="center"
        android:text="@string/item_post_like_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/likeButton"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/commentCount"
        android:layout_width="56dp"
        android:layout_height="33dp"
        android:layout_marginEnd="44dp"
        android:gravity="center"
        android:text="@string/item_post_comment_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/commentButton"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/post"
        android:layout_width="219dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/postDate"
        app:layout_constraintTop_toBottomOf="@+id/postDate"
        tools:text="@string/item_post_post" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="299dp"
        android:layout_height="85dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post"
        app:srcCompat="@drawable/no_photo"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/likeButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_like"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/commentButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="49dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/likeCount"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/comment_svgrepo_com"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/postAvatar"
        android:layout_width="78dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015"
        app:srcCompat="@drawable/avatar"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>